# docker-rosgala

./: README.md
docker-rosgala/: .env  AutoLife-disable.txt  README.md  disable_autonomous_life_on_boot.py  docker-compose.yml  reactivate_robot.sh
docker-rosgala/config/: .aliases.sh  .p10k.zsh  ros_requirements.txt
docker-rosgala/container-mesa/: .devcontainer.json
docker-rosgala/container-nvidia/: .devcontainer.json
docker-rosgala/docker/: Dockerfile  Dockerfile.mesa  Dockerfile.nvidia
docker-rosgala/src/: posture.py  remote.py  startup.py
docker-rosgala/src/gazebo_pepper_launcher/: CMakeLists.txt  package.xml
docker-rosgala/src/gazebo_pepper_launcher/config/: pepper_gazebo.yaml
docker-rosgala/src/gazebo_pepper_launcher/launch/: pepper_gazebo_depthimage.launch  pepper_gazebo_mine_office.launch
docker-rosgala/src/gazebo_pepper_launcher/models/bench/: bench.sdf
docker-rosgala/src/gazebo_pepper_launcher/models/closet/: closet.sdf
docker-rosgala/src/gazebo_pepper_launcher/models/dining_chair/: dining_chair.sdf
docker-rosgala/src/gazebo_pepper_launcher/models/kitchen_table/: kitchen_table.sdf
docker-rosgala/src/gazebo_pepper_launcher/models/sofa/: sofa.sdf
docker-rosgala/src/gazebo_pepper_launcher/models/wardrobe/: wardrobe.sdf
docker-rosgala/src/gazebo_pepper_launcher/rviz/: mydefault.rviz
docker-rosgala/src/gazebo_pepper_launcher/scripts/: arms_down.sh
docker-rosgala/src/pepper_launcher/: CMakeLists.txt  package.xml
docker-rosgala/src/rviz_config/: pepper.rviz
docker-rosgala/src/test/: package.xml
(+26 files in other folders)
